# clipmath

./: README.md  bin.py  pyproject.toml
clipmath/: main.py
